feat(MainController): 추가 구매 여부 확인 구현
- 컨트롤러들을 호출하며 전체 흐름을 제어하는 MainController 구현
- 초기 의존성 주입 세팅을 위해 config.DIContainer 구현